force-app/main/default/objects/Event_Location__c/Event_Location__c.object-meta.xml
<CustomObject>
    <description>BOLT &amp; GSL project - for maintaining sites/rooms/tours</description>
    <label>Event Location</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Location</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>