force-app/main/default/objects/Event_Location__c/fields/Dependent_Room__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependent Room</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>No rooms found.</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Rooms</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event_Location__c</referenceTo>
    <relationshipName>Dependent_Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>