force-app/main/default/objects/Event_Location__c/fields/DST_Start__c.field-meta.xml
<CustomField>
    <fullName>DST_Start__c</fullName>
    <label>DST Start</label>
    <type>Date</type>
</CustomField>