force-app/main/default/objects/Event_Location__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DSC</fullName>
            </value>
            <value>
                <fullName>EBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>