force-app/main/default/objects/Event_Location__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Engagement_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Briefing</fullName>
            </value>
            <value>
                <fullName>Tour</fullName>
            </value>
            <value>
                <fullName>Architectural Design Session</fullName>
            </value>
            <value>
                <fullName>Proof of Concept</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Analyst Events</fullName>
            </value>
            <value>
                <fullName>Field Briefing</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>