force-app/main/default/objects/Event_Location__c/fields/Offer_Catering__c.field-meta.xml
<CustomField>
    <fullName>Offer_Catering__c</fullName>
    <inlineHelpText>If yes, you will see catering options when you build your agenda and you can print catering reports for your site.</inlineHelpText>
    <label>Offer Catering?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>