force-app/main/default/objects/Event_Location__c/fields/Offer_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Offer_Transportation__c</fullName>
    <inlineHelpText>If yes, Account Execs will see a transportation area where they can specify pick up and drop off times. You will also see transportation options in the build agenda screen</inlineHelpText>
    <label>Offer Transportation?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>