force-app/main/default/objects/Event_Location__c/fields/Question1__c.field-meta.xml
<CustomField>
    <fullName>Question1__c</fullName>
    <label>Question1</label>
    <type>TextArea</type>
</CustomField>