force-app/main/default/objects/Event_Location__c/fields/Question2__c.field-meta.xml
<CustomField>
    <fullName>Question2__c</fullName>
    <label>Question2</label>
    <type>TextArea</type>
</CustomField>