force-app/main/default/objects/Event_Location__c/fields/Question3__c.field-meta.xml
<CustomField>
    <fullName>Question3__c</fullName>
    <label>Question3</label>
    <type>TextArea</type>
</CustomField>