force-app/main/default/objects/Event_Location__c/fields/Room_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Room_Occupancy__c</fullName>
    <label>Room Occupancy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>