force-app/main/default/objects/Event_Location__c/fields/Select_Site__c.field-meta.xml
<CustomField>
    <fullName>Select_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Event_Location__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sites</value>
        </filterItems>
        <filterItems>
            <field>Event_Location__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event_Location__c</referenceTo>
    <relationshipLabel>Rooms&amp;Tours</relationshipLabel>
    <relationshipName>Select_Site</relationshipName>
    <type>Lookup</type>
</CustomField>