force-app/main/default/objects/Event_Location__c/recordTypes/Rooms.recordType-meta.xml
<RecordType>
    <fullName>Rooms</fullName>
    <active>true</active>
    <description>Select this for creating a new room</description>
    <label>Rooms</label>
</RecordType>