force-app/main/default/objects/Event_Location__c/recordTypes/Sites.recordType-meta.xml
<RecordType>
    <fullName>Sites</fullName>
    <active>true</active>
    <description>Select this for creating a new site</description>
    <label>Sites</label>
</RecordType>