force-app/main/default/objects/Event_Location__c/recordTypes/Tours.recordType-meta.xml
<RecordType>
    <fullName>Tours</fullName>
    <active>true</active>
    <description>Select this for creating a new tour</description>
    <label>Tours</label>
</RecordType>