force-app/main/default/objects/Event_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Select_Site__c</columns>
    <columns>Room_Occupancy__c</columns>
    <columns>Active__c</columns>
    <columns>Engagement_Type__c</columns>
    <columns>Site_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>