force-app/main/default/objects/Event_Location__c/listViews/DSC_Event_Location.listView-meta.xml
<ListView>
    <fullName>DSC_Event_Location</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Event__c</columns>
    <columns>Engagement_Type__c</columns>
    <columns>Select_Site__c</columns>
    <columns>Email__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Engagement_Type__c</field>
        <operation>equals</operation>
        <value>DSC</value>
    </filters>
    <label>DSC Event Location</label>
    <language>en_US</language>
    <sharedTo>
        <group>DellSolutionCentersStaff</group>
    </sharedTo>
</ListView>