force-app/main/default/objects/Event_Location__c/listViews/Rooms.listView-meta.xml
<ListView>
    <fullName>Rooms</fullName>
    <columns>NAME</columns>
    <columns>Select_Site__c</columns>
    <columns>Region__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event_Location__c.Rooms</value>
    </filters>
    <label>Rooms</label>
    <language>en_US</language>
</ListView>