force-app/main/default/objects/Event_Location__c/listViews/Sites.listView-meta.xml
<ListView>
    <fullName>Sites</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Engagement_Type__c</columns>
    <columns>Region__c</columns>
    <columns>Email__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event_Location__c.Sites</value>
    </filters>
    <label>Sites</label>
    <language>en_US</language>
</ListView>