force-app/main/default/objects/Event_Location__c/listViews/Tours.listView-meta.xml
<ListView>
    <fullName>Tours</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Select_Site__c</columns>
    <columns>Email__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event_Location__c.Tours</value>
    </filters>
    <label>Tours</label>
    <language>en_US</language>
</ListView>